<resources>
    <string name="app_name">05_Dashboard_Menu</string>
    <string name="result_format">If you were a dog, you would be %d years old</string>
    <string name="you_have_to_insert_an_age">You have to insert an age.</string>
    <string name="calculate">Calculate</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="your_age">Your age</string>
    <string name="alberto_ejemplo">How old are you?</string>
    <string name="bienvenidos_a_mi_app_calculadora">Welcome to the calculator</string>
    <string name="introduzca_el_primer_n_mero">Enter the first number</string>
    <string name="numero_1">number 1</string>
    <string name="introduzca_el_n_mero_2">Enter the second number</string>
    <string name="numero_2">number 2</string>
    <string name="suma">+</string>
    <string name="restar">-</string>
    <string name="mult">x</string>
    <string name="dividir">/</string>
    <string name="el_resultado_de_la_operacion_es">The result is: %d</string>
    <string name="error_rellenar_valores">Enter all the numbers:</string>
    <string name="todo">ALL</string>
    <string name="pregunta">QUESTION</string>
    <string name="respuesta">ANSWER</string>
    <string name="numero">0/3</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="acierto">Success</string>
    <string name="continuar">Continue</string>
    <string name="pregunta1">What pokemon has no weaknesses?</string>
    <string name="respuestaA1">Gastrodon</string>
    <string name="respuestaB1">Elekid</string>
    <string name="respuestaC1">Eelektross</string>
    <string name="respuestaD1">Mimikyu</string>
    <string name="correcto">CORRECT</string>
    <string name="incorrecto">INCORRECT</string>
    <string name="felicidades">CONGRATULATIONS!</string>
    <string name="yaTerminasteTodasLasPreguntas">You finished the questions</string>
    <string name="repetir">Retry</string>
    <string name="pregunta2">Which is not a Magic The Gathering card game format?</string>
    <string name="respuestaA2">Commander</string>
    <string name="respuestaB2">Digital</string>
    <string name="respuestaC2">Standard</string>
    <string name="respuestaD2">Booster Draft</string>
    <string name="pregunta3">In the board game Catan, what number is impossible to use in the game?</string>
    <string name="respuestaA3">6</string>
    <string name="respuestaB3">7</string>
    <string name="respuestaC3">2</string>
    <string name="respuestaD3">1</string>
    <string name="correct">CORRECT</string>
</resources>